<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_3"
    tools:context=".ui.settings.HelpFragment">

    <TextView
        android:id="@+id/help_savol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/help_qibla"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_qibla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/help_qibla_javob"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_savol"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/help_vaqt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/help_vaqt"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_qibla" />

    <TextView
        android:id="@+id/help_vaqt_sekundomer_javob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/help_vaqt_sekundomer_javob"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_vaqt"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/help_vaqt_javob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/help_vaqt_javob"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_vaqt_sekundomer_javob"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/help_tasbeh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/help_tasbeh"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_vaqt_javob" />

    <TextView
        android:id="@+id/help_tasbeh_javob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/help_tasbeh_javob"
        android:textColor="#3E3E3E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tasbeh"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>